--- a/LECTURE7.html
+++ b/LECTURE7.html
@@ -464,7 +464,7 @@ div.tocify {
 <h2>Why matrices?</h2>
 <div id="reason-1-simplify" class="section level3">
 <h3>Reason 1: simplify!</h3>
-<p><img src="IM8.jpg" /></p>
+<p><img src="IM_lab3.JPG" /></p>
 <p>You might recognize this InsightMaker model from Lab 3. This represents an age-structured population with only three age classes. Imagine if there were five age classes, or 10? What if you could jump from (e.g.) stage 3 to stage 5? Or from stage 5 back to stage 3? How many lines would you have to draw, how many equations would you have to put in all the different flows? It would be tedious, and you could easily run into errors that would be very hard to debug!</p>
 <p><img src="teasel1.jpg" /></p>
 <p>Consider the teasel example from our textbook. It’s possible to implement this model in InsightMaker, but it would be tedious and potentially prone to error. And this is far from the most complicated populations out there (although notice that plants can do some things that animals can’t do- for instance go backwards in developmental stage. With matrix models, there is an easier way!</p>
