--- a/LECTURE7.html
+++ b/LECTURE7.html
@@ -594,7 +594,7 @@ tenYears</code></pre>
 ## flowering   12905.64   38754.83    61484.15   169797.3   431750.1</code></pre>
 <p>Finally, we can plot out the abundance of each stage over 10 years!</p>
 <p><img src="LECTURE7_files/figure-html/unnamed-chunk-7-1.png" width="672" /></p>
-<p>So projection is easy with matrices! What more reason to we need to convince ourselves of why matrix population models are worth knowing? Well, how about this…</p>
+<p>So projection is easy with matrices! What more reason do we need to convince ourselves of why matrix population models are worth knowing? Well, how about this…</p>
 </div>
 <div id="reason-3-matrix-algebra-tricks" class="section level3">
 <h3>Reason 3: Matrix algebra tricks!</h3>
